fixed overflow

--- a/css/large.css
+++ b/css/large.css
@@ -12,7 +12,6 @@
 
     body{
         height: 100vh;
-        /*height: calc(100vh - 4rem);*/
         background-color: green;
     }
 
@@ -22,21 +21,20 @@
 
     main{
         height: calc(100vh - 4rem);
-        flex-direction: row;
         overflow-x: scroll;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-        grid-template-rows: calc(100vh - 4rem);
+        grid-template-rows: 1fr;
         background-color: aqua;
     }
 
-    section{
+    /*section{
         width: 100vw;
         background-color: greenyellow;
-    }
+    }*/
 
     #contact-white{
-        height: calc(100vh - 3rem);
+        height: 100%;
         width: 70vw;
         grid-column-start: 1;
         grid-column-end: 2;
@@ -46,7 +44,8 @@
     }
 
     #splash{
-        height: calc(100vh - 3rem);
+        height: 100%;
+        width: 100vw;
         grid-column-start: 2;
         grid-column-end: 3;
         grid-row-start: 1;
@@ -55,7 +54,8 @@
     }
 
     #about{
-        height: calc(100vh - 3rem);
+        height: 100%;
+        width: 70vw;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 1;
@@ -64,7 +64,8 @@
     }
 
     #skills{
-        height: calc(100vh - 3rem);
+        height: 100%;
+        width: 100vw;
         grid-column-start: 4;
         grid-column-end: 5;
         grid-row-start: 1;
@@ -74,7 +75,8 @@
     }
 
     #projects{
-        height: calc(100vh - 3rem);
+        height: 100%;
+        width: 100vw;
         grid-column-start: 5;
         grid-column-end: 6;
         grid-row-start: 1;
@@ -84,7 +86,7 @@
     }
 
     #contact-black{
-        height: calc(100vh - 3rem);
+        height: 100%;
         width: 80vw;
         grid-column-start: 6;
         grid-column-end: 7;
@@ -154,6 +156,7 @@
         grid-column-end: 5;
         grid-row-start: 6;
         grid-row-end: 7;
+        padding: 0;
     }
 
     .scroll-button{
@@ -194,11 +197,11 @@
 
     .icon-color-light:hover{
         text-shadow: 3px 3px 10px rgba(202, 215, 228, 1);
-       }
+    }
 
     /*CSS til om mig*/
     .about-grid{
-        height: calc(100vh - 4rem);
+        height: 100%;
         padding: 0 2rem;
     }
     
@@ -207,12 +210,13 @@
         display: flex;
         flex-direction: row;
     }
+
     /* light contact*/
    
     .grid-contact-light{
         display: grid;
-        grid-template-columns: 9rem 1fr 1fr 3rem;
-        grid-template-rows: 6rem 0.25fr auto 0.25fr 6rem;
+        grid-template-columns: 6rem 1fr 1fr 3rem;
+        grid-template-rows: 6rem 0.25fr 1fr 0.25fr 6rem;
     }
 
     .icon-contact-light{
@@ -286,37 +290,46 @@
 
     /*dark contact*/
     .grid-contact-black{
-        grid-template-columns: 1fr 1fr 9rem;
-        grid-template-rows: 6rem 0.25fr auto 0.25fr 6rem;
+        grid-template-columns: 8rem 1fr 1fr 6rem;
+        grid-template-rows: 6rem 0.25fr 1fr 0.25fr 6rem;
     }
-    .form-black{
+
+    .contact03{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 6;
+    }
+    
+    .address-black{
         grid-column-start: 2;
         grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 4;
+        padding: 1rem;
+    }
+
+    .form-black{
+        grid-column-start: 3;
+        grid-column-end: 4;
         grid-row-start: 2;
         grid-row-end: 5;
         margin: 0;
     }
 
     .icon-contact{
-        grid-column-start: 3;
-        grid-column-end: 4;
+        grid-column-start: 4;
+        grid-column-end: 5;
         grid-row-start: 3;
         grid-row-end: 6;
     }
 
-    .address-black{
-        grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 2;
-        grid-row-end: 4;
-        padding: 1rem;
-        padding-right: 0;
-    }
-
+    
+   
     /* css til vertikale headings*/
     
     .line-horizontal{
-        width: 3px;
+        width: 2px;
         height: 5rem;
         margin-top: 7px;
         background-color: #CAD7E4;
@@ -336,11 +349,6 @@
         flex-direction: column;
         justify-content: center;
         margin: 0;
-    }
-
-    .headings-box{
-        width: 8rem;
-        height: calc(100vh - 4rem)
     }
 
 
