--- a/css/medium.css
+++ b/css/medium.css
@@ -90,7 +90,7 @@
     .about-grid{
         display: grid;
         grid-template-columns: 1fr 0.25fr 1fr;
-        grid-template-rows: 1fr 1fr 4fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr auto 1fr 1fr;
         padding: 2rem;
         height: 60vh;
     }
@@ -130,19 +130,19 @@
 
     .numbers-light{
         font-size: 4rem;
-        font-weight: 800;
+        font-weight: 700;
     }
 
     .line-horizontal{
         width: 5rem;
-        height: 3px;
+        height: 2px;
         margin-top: 7px;
         background-color: #CAD7E4;
     }
 
     .text-light{
         font-size: 1.5rem;
-        font-weight: 600;
+        font-weight: 500;
     }
 
     .headings-wrapper{
@@ -168,34 +168,45 @@
     /* css til kontakt sektionen */
     
     .grid-contact-black{
-        display: grid;
-        grid-template-columns: 3.5rem auto 3.5rem;
-        grid-template-rows: 1fr 2fr;
+        grid-template-rows: 8rem 1fr 2fr;
     }
 
-    .form-black{
-        grid-column-start: 2;
-        grid-column-end: 3;
-        grid-row-start: 2;
-        grid-row-end: 3;
-    }
-
-    .icon-contact{
-        grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 2;
-        grid-row-end: 3;
-    }
-
-    .address-black{
+    .contact03{
         grid-column-start: 2;
         grid-column-end: 3;
         grid-row-start: 1;
         grid-row-end: 2;
         display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .address-black{
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        display: flex;
         flex-direction: column;
         gap: 0.5rem;
     }
+
+    .form-black{
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        margin: 0;
+    }
+
+    .icon-contact{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 3;
+        grid-row-end: 4;
+    }
+
+    
 
     
 
